--- a/app/views/home/_info_card.html.haml
+++ b/app/views/home/_info_card.html.haml
@@ -5,7 +5,7 @@
     %p.lead Was ist das?
 
   .card-body
-    %p Diese Projekt dient der Kommunikation innerhalb der Feuerwehrsport-Szene in Deutschland. Es soll die Übersicht über Wettkämpfe, Termine und Ergebnisse verbessern.
+    %p Dieses Projekt dient der Kommunikation innerhalb der Feuerwehrsport-Szene in Deutschland. Es soll die Übersicht über Wettkämpfe, Termine und Ergebnisse verbessern.
 
     %p Die Wettkampf-Planung und -Auswertung ist dabei auf den internationalen Feuerwehrsport zugeschnitten. Es können zwar auch andere Wettkämpfe (z.B. Jugend, Traditionell) angelegt werden, aber die volle Unterstützung ist derzeit noch nicht gegeben.
 
