--- a/spec/fixtures/views/Home_info_shows_info_page/view.html
+++ b/spec/fixtures/views/Home_info_shows_info_page/view.html
@@ -57,7 +57,7 @@
 <p class='lead'>Was ist das?</p>
 </div>
 <div class='card-body'>
-<p>Diese Projekt dient der Kommunikation innerhalb der Feuerwehrsport-Szene in Deutschland. Es soll die Übersicht über Wettkämpfe, Termine und Ergebnisse verbessern.</p>
+<p>Dieses Projekt dient der Kommunikation innerhalb der Feuerwehrsport-Szene in Deutschland. Es soll die Übersicht über Wettkämpfe, Termine und Ergebnisse verbessern.</p>
 <p>Die Wettkampf-Planung und -Auswertung ist dabei auf den internationalen Feuerwehrsport zugeschnitten. Es können zwar auch andere Wettkämpfe (z.B. Jugend, Traditionell) angelegt werden, aber die volle Unterstützung ist derzeit noch nicht gegeben.</p>
 <p>Vor diesem Projekt gab es die Feuerwehrsport-Statistik und den Wettkampf-Manager. Beide sind mit der Zeit gewachsen und erfüllten nicht mehr die Anforderungen an eine zeitgemäße Wettkampfplanung. Gerade die Statistik-Seite war eigentlich niemals als Planungs-Tool gedacht. Der Wettkampf-Manager war ursprünglich nur für den lokalen Einsatz konzipiert und enthält deswegen wenig Funktionen, die man gut im Internet nutzen kann.</p>
 </div>
