Gewünschte Wertungsgruppe in Wettkämpfer-Tabelle auswählbar machen
refs #30

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -204,6 +204,12 @@
   border: 1px solid $light
   margin: 0.4rem
   padding: 0.4rem
+.quick-assessment-change-link
+  color: #999
+  cursor: pointer
+  &:hover
+    color: #000
+
 
 .tiny
   font-size: 71%
@@ -280,6 +286,7 @@ span.best-badge, span.team-badge
   padding: 0
   border: 1px solid #888
   width: 80%
+  max-width: 50rem
 
 .separate-times
   font-size: 80%
