--- a/app/views/competitions/people/edit_assessment_requests.html.haml
+++ b/app/views/competitions/people/edit_assessment_requests.html.haml
@@ -2,34 +2,6 @@
 
 .row.g-4
   .col-md-8
-    = simple_form_for(resource_instance, url: url_for(controller: controller_path, action: :update, form: :edit_assessment_requests, return_to: params[:return_to])) do |f|
-      = card("Wettkämpfer: #{@person.full_name}", class: 'mb-3') do |c|
-        - c.body do
-          - @competition.assessments.requestable_for_person(@person.band).each do |assessment|
-            .assessment-request
-              = f.simple_fields_for :requests, @person.requests.find_or_initialize_by(assessment:) do |g|
-                = g.input :_destroy, as: :boolean, label: 'Teilnahme', input_html: { checked: g.object.persisted? }, checked_value: '0', unchecked_value: '1'
-                = g.input :assessment_id, as: :hidden
-
-                .row.edit-assesment-type
-                  .col-md-9
-                    = g.input :assessment_type, as: :select, collection: AssessmentRequest.possible_assessment_types(assessment), label: assessment.name, label_method: ->(type) { t("assessment_types.#{type}") }, include_blank: false, input_html: { class: 'assessment-types' }
-                  .col-md-3.group-competitor-order
-                    = g.input :group_competitor_order
-                  .col-md-3.single-competitor-order
-                    = g.input :single_competitor_order
-                  .col-md-3.competitor-order
-                    - case assessment.discipline.key
-                    - when 'fs'
-                      = g.input :competitor_order, collection: AssessmentRequest.fs_names.each_with_index.map { |n, i| [n, i] }, include_blank: false
-                    - when 'la'
-                      = g.input :competitor_order, collection: AssessmentRequest.la_names.each_with_index.map { |n, i| [n, i] }, include_blank: false
-                    - when 'gs'
-                      = g.input :competitor_order, collection: AssessmentRequest.gs_names.each_with_index.map { |n, i| [n, i] }, include_blank: false
-                    - else
-                      = g.input :competitor_order
-        - c.footer do
-          = f.primary_button :submit
-          = f.cancel_button(competition_people_path)
+    = render 'edit_assessment_requests_form'
   .col-md-4
     = render('edit_right')
