Sortierung auf Startseite festlegen

--- a/app/views/home/_competitions_card.html.haml
+++ b/app/views/home/_competitions_card.html.haml
@@ -1,5 +1,5 @@
 - if competitions.exists?
-  - grouped_competitions = competitions.reorder(:date).group_by(&:year_and_month)
+  - grouped_competitions = competitions.reorder(:date, :name).group_by(&:year_and_month)
   .card
     - grouped_competitions.each_value do |competitions|
       - sample = competitions.first
