--- a/app/views/competitions/series/assessments/show.html.haml
+++ b/app/views/competitions/series/assessments/show.html.haml
@@ -3,27 +3,32 @@
 .row.g-4.mb-4
   .col-md-6= render('competitions/series/rounds/round_card', round: @assessment.round)
 
-= card_direct(@assessment.name) do
-  %table.table.table-hover.table-bordered.table-sm
-    %thead
-      %th Platz
-      %th Name
-      %th Vorname
-      - @assessment.round.showable_cups(@competition).each do |cup|
-        %th= cup.competition_place
-      %th Bestzeit
-      %th Summe
-      %th Teil.
-      %th Punkte
-    %tbody
-      - @assessment.rows(@competition).each do |row|
-        %tr
-          %td= row.rank
-          %td= row.entity.last_name
-          %td= row.entity.first_name
-          - @assessment.round.showable_cups(@competition).each do |cup|
-            %td= row.participation_for_cup(cup)&.result_entry_with_points
-          %td= row.best_result_entry
-          %td= row.sum_result_entry
-          %td= row.count
-          %td= row.points
+= card(@assessment.name) do |c|
+  - c.direct do
+    %table.table.table-hover.table-bordered.table-sm
+      %thead
+        %th Platz
+        %th Name
+        %th Vorname
+        - @assessment.round.showable_cups(@competition).each do |cup|
+          %th= cup.competition_place
+        %th Bestzeit
+        %th Summe
+        %th Teil.
+        %th Punkte
+      %tbody
+        - @assessment.rows(@competition).each do |row|
+          %tr
+            %td= row.rank
+            %td= row.entity.last_name
+            %td= row.entity.first_name
+            - @assessment.round.showable_cups(@competition).each do |cup|
+              %td= row.participation_for_cup(cup)&.result_entry_with_points
+            %td= row.best_result_entry
+            %td= row.sum_result_entry
+            %td= row.count
+            %td= row.points
+
+  - if can?(:manage, @competition) && @competition.certificates_templates.exists?
+    - c.actions do |actions|
+      - actions.link_to 'Urkunden', new_competition_certificates_list_path(series_person_assessment_id: @assessment.id), end_icon: :file_certificate
