PDF-Übersicht für Serien

--- a/app/views/competitions/series/assessments/show.html.haml
+++ b/app/views/competitions/series/assessments/show.html.haml
@@ -29,6 +29,7 @@
             %td= row.count
             %td= row.points
 
-  - if can?(:manage, @competition) && @competition.certificates_templates.exists?
-    - c.actions do |actions|
+  - c.actions do |actions|
+    - actions.link_to 'PDF', { format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
+    - if can?(:manage, @competition) && @competition.certificates_templates.exists?
       - actions.link_to 'Urkunden', new_competition_certificates_list_path(series_person_assessment_id: @assessment.id), end_icon: :file_certificate
