--- a/app/views/competitions/series/rounds/show.html.haml
+++ b/app/views/competitions/series/rounds/show.html.haml
@@ -46,6 +46,7 @@
                   %td.hide-xs= row.count
                   %td.hide-xs= row.best_result_entry
                   %td= row.points
-        - if can?(:manage, @competition) && @competition.certificates_templates.exists?
-          - c.actions do |actions|
+        - c.actions do |actions|
+          - actions.link_to 'PDF', { format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
+          - if can?(:manage, @competition) && @competition.certificates_templates.exists?
             - actions.link_to 'Urkunden', new_competition_certificates_list_path(series_team_round_id: "#{@round.id}-#{gender}"), end_icon: :file_certificate
