--- a/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
+++ b/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
@@ -231,6 +231,18 @@ Hakenleitersteigen - Männlich
 </table>
 </div>
 
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div></div>
+<div>
+<div class='btn-group'>
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cupPDF_URL">PDF
+<i class='far fa-file-pdf'></i>
+</a>
+</div>
+</div>
+</div>
+</div>
 </div>
 </div>
 </body>
