--- a/spec/fixtures/views/Competition_competition_creations_creates_competition-showing/view.html
+++ b/spec/fixtures/views/Competition_competition_creations_creates_competition-showing/view.html
@@ -115,7 +115,7 @@ Erweitert
 <h1>Foo</h1>
 <p class='lead mb-0'>29.02.2024 - Berlin</p>
 </div>
-<div class='card-body'>
+<div class='card-body competition-descripton'>
 <p>Der Wettkampf <em>Foo</em> findet am <strong>29.02.2024</strong> in <strong>Berlin</strong> statt.</p>
 
 <p>Weitere Informationen folgen.</p>
