--- a/spec/fixtures/views/competitions_visibilities_simple_access_login_logs_in_and_out-with-logout-link/view.html
+++ b/spec/fixtures/views/competitions_visibilities_simple_access_login_logs_in_and_out-with-logout-link/view.html
@@ -98,7 +98,7 @@ Erweitert
 <h1>MV-Cup</h1>
 <p class='lead mb-0'>29.02.2024 - Rostock</p>
 </div>
-<div class='card-body'>
+<div class='card-body competition-descripton'>
 <p>Der Wettkampf <em>MV-Cup</em> findet am <strong>29.02.2024</strong> in <strong>Rostock</strong> statt.</p>
 
 <p>Weitere Informationen folgen.</p>
