Veröffentlichen mit mehr Daten erweitern

--- a/spec/fixtures/views/competitions_publishings_publishing_competition_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/competitions_publishings_publishing_competition_uses_CRUD-new-error/view.html
@@ -124,6 +124,10 @@ Erweitert
 Du willst diesen Wettkampf veröffentlichen. Das heißt, dass Startlisten und Ergebnisse auf Feuerwehrsport-Statistik veröffentlicht werden. Du kannst danach keine Änderungen mehr am Wettkampf vornehmen. Bist du dir sicher?
 <fieldset class="form-group boolean optional competitions_publishing_confirm form-group-invalid"><div class="form-check"><input name="competitions_publishing[confirm]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input is-invalid boolean optional" autofocus="autofocus" aria-invalid="true" type="checkbox" value="1" name="competitions_publishing[confirm]" id="competitions_publishing_confirm" /><label class="form-check-label boolean optional" for="competitions_publishing_confirm">Ich will alle Daten veröffentlichen und die Auswertung dieses Wettkampfes beenden.</label><div class="invalid-feedback">Bestätigung muss akzeptiert werden</div></div></fieldset>
 </div>
+<div class='card-body'>
+<div class="form-group text optional competitions_publishing_hint"><label class="control-label text optional" for="competitions_publishing_hint">Zusätzlichen Hinweise</label><textarea class="form-control text optional" name="competitions_publishing[hint]" id="competitions_publishing_hint">
+</textarea><small class="form-text text-muted">Du solltest den Administratoren von Feuerwehrsport-Statistik Hinweise auf besondere Umstände geben. Zum Beispiel, welche Ausschreibung genutzt wurde oder ob die Ziele eine Dosen waren. Es reicht ein kurzer Hinweis: WKO2023 - DIN - Zielgeräte</small></div>
+</div>
 
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
