--- a/spec/fixtures/views/competitions_publishings_publishing_competition_uses_CRUD-new/view.html
+++ b/spec/fixtures/views/competitions_publishings_publishing_competition_uses_CRUD-new/view.html
@@ -127,6 +127,9 @@ Du willst diesen Wettkampf veröffentlichen. Das heißt, dass Startlisten und Er
 <div class="form-group text optional competitions_publishing_hint"><label class="control-label text optional" for="competitions_publishing_hint">Zusätzlichen Hinweise</label><textarea class="form-control text optional" name="competitions_publishing[hint]" id="competitions_publishing_hint">
 </textarea><small class="form-text text-muted">Du solltest den Administratoren von Feuerwehrsport-Statistik Hinweise auf besondere Umstände geben. Zum Beispiel, welche Ausschreibung genutzt wurde oder ob die Ziele eine Dosen waren. Es reicht ein kurzer Hinweis: WKO2023 - DIN - Zielgeräte</small></div>
 </div>
+<div class='card-body text-bg-warning mb-2'>
+Anscheinend hast du deine Ergebnisse <b>extern gepflegt</b>. Lade Sie doch als PDF hier in Feusport zu deinem Wettkampf hoch. Dann können alle Teilnehmer die Ergebnisse nochmal ansehen.
+</div>
 
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
