--- a/app/views/home/info.html.haml
+++ b/app/views/home/info.html.haml
@@ -6,4 +6,5 @@
     = render('info_card')
     .mt-4= render('development_card')
   .col-lg-6
-    = render('impressum_card')
+    = render('changelog_card')
+    .mt-4= render('impressum_card')
