--- a/spec/fixtures/views/Home_changelogs_shows_changelogs_page/view.html
+++ b/spec/fixtures/views/Home_changelogs_shows_changelogs_page/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Über feusport.de - Feuerwehrsport</title>
+<title>Änderungen - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -28,7 +28,7 @@
 <a class="nav-link" href="/help">Hilfe</a>
 </li>
 <li class='nav-item'>
-<a class="nav-link active" aria-current="page" href="/info">Über feusport.de</a>
+<a class="nav-link" href="/info">Über feusport.de</a>
 </li>
 <li class='nav-item'>
 <a class="nav-link" href="/users/sign_in">Anmelden</a>
@@ -40,7 +40,7 @@
 </nav>
 <header class='page-header'>
 <div class='container'>
-<h1>Über feusport.de</h1>
+<h1>Änderungen</h1>
 
 </div>
 </header>
@@ -50,33 +50,6 @@
 </div>
 <div class='pb-4 mt-4 container'><div class='row g-4'>
 <div class='col-lg-6'>
-<div class='card text-bg-accent2'>
-<img class="card-img-top" src="/assets/ambiance/blurred-01.jpg" />
-<div class='card-header'>
-<h2>feusport.de</h2>
-<p class='lead'>Was ist das?</p>
-</div>
-<div class='card-body'>
-<p>Dieses Projekt dient der Kommunikation innerhalb der Feuerwehrsport-Szene in Deutschland. Es soll die Übersicht über Wettkämpfe, Termine und Ergebnisse verbessern.</p>
-<p>Die Wettkampf-Planung und -Auswertung ist dabei auf den internationalen Feuerwehrsport zugeschnitten. Es können zwar auch andere Wettkämpfe (z.B. Jugend, Traditionell) angelegt werden, aber die volle Unterstützung ist derzeit noch nicht gegeben.</p>
-<p>Vor diesem Projekt gab es die Feuerwehrsport-Statistik und den Wettkampf-Manager. Beide sind mit der Zeit gewachsen und erfüllten nicht mehr die Anforderungen an eine zeitgemäße Wettkampfplanung. Gerade die Statistik-Seite war eigentlich niemals als Planungs-Tool gedacht. Der Wettkampf-Manager war ursprünglich nur für den lokalen Einsatz konzipiert und enthält deswegen wenig Funktionen, die man gut im Internet nutzen kann.</p>
-</div>
-</div>
-
-<div class='mt-4'><div class='card'>
-<img class="card-img-top" src="/assets/ambiance/blurred-02.jpg" />
-<div class='card-header'>
-<h2 class='display-4'>Entwicklung</h2>
-<p class='lead'>Was steckt dahinter?</p>
-</div>
-<div class='card-body'>
-<p>Die Quelltexte dieser Seite stehen unter der GPLv3 und können somit von dir eingesehen und für eigene Projekte verwendet werden, wenn du die GPLv3 dabei beachtest. Den Quellcode findest du <a href="https://github.com/Feuerwehrsport/feusport">auf Github</a>.</p>
-<p>Als grundlegendes Framework wird Ruby on Rails mit einem PostgreSQL-Server verwendet. Im Live-Betrieb läuft es auf einem Debian-Linux-Server, welcher von der <a href="https://lichtbit.com">Lichtbit GmbH</a> zur Verfügung gestellt wird.</p>
-</div>
-</div>
-</div>
-</div>
-<div class='col-lg-6'>
 <div class='card'>
 <div class='card-header'>
 <h4 class='mb-0'>Changelog</h4>
@@ -85,53 +58,24 @@
 <p>Die Seite wird ständig weiterentwickelt. Nachfolgend sind die letzten größeren Änderungen aufgeführt. Alle Änderungen stehen auf <a href="https://github.com/Feuerwehrsport/feusport/commits/main">Github</a> zur Verfügung.</p>
 <p>Gerne kann ein <a href="https://github.com/Feuerwehrsport/feusport/issues">Issue über Github</a> angelegt werden, wenn du auch Ideen zur Weiterentwicklung hast.</p>
 </div>
-<table class='table'>
-<tr>
-<td>29.02.2024</td>
-<td><a href="/changelogs">Überschrift</a></td>
-</tr>
-</table>
 </div>
+</div>
+<div class='col-lg-6'>
+<div class='card mb-4'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Überschrift</h4>
+</div>
+</div>
+<div class='card-body'>
+<p class='text-end'>29.02.2024</p>
+<p><h1>hans</h1>
 
-<div class='mt-4'><div class='card'>
-<div class='card-header'>
-<h4 class='mb-0'>Kontakt</h4>
-</div>
-<div class='card-body'>
-<p>Besteht ein Bedürfnis, den Administrator und Entwickler dieser Seite zu kontaktieren, ist dies sehr wohl gewünscht. Für Anregungen oder Kritik bin ich immer offen. Falls es sich um einen Fehler in der Programmierung handelt, bitte ich darum, dass die URL der Seite kopiert wird und mit der E-Mail verschickt wird. So kann ich den Fehler schneller finden und auch beheben.</p>
-<p>Gerne kann auch ein <a href="https://github.com/Feuerwehrsport/feusport/issues">Issue über Github</a> angelegt werden. Eventuell hat sogar schon jemand anderes den gleichen Fehler gemeldet, dann kannst du seine Gedanken dort ergänzen.</p>
-</div>
-<table class='table'>
-<tr>
-<td>Anprechpartner</td>
-<td>Georg Limbach</td>
-</tr>
-<tr>
-<td>E-Mail-Adresse</td>
-<td>georf@georf.de</td>
-</tr>
-</table>
-</div>
-<div class='card mt-4'>
-<div class='card-header'>
-<h4 class='mb-0'>Hinweise</h4>
-</div>
-<div class='card-body'>
-<p>Diese Webseite betreibe ich kostenlos als Privatperson. Sollte sich jemand durch die Verwendung der Daten in seinem Urheberrecht verletzt fühlen, bitte nicht sofort Abmahnen, sondern eine E-Mail schreiben. Dies spart Zeit und Geld.</p>
-<p>Die veröffentlichten Daten und Dateien stammen von den registrierten Nutzern. Ich übernehme also keine Verantwortung für Richtigkeit oder Vollständigkeit der hier veröffentlichen Daten.</p>
-</div>
-</div>
-<div class='card mt-4'>
-<div class='card-header'>
-<h4 class='mb-0'>Verantwortlichkeit</h4>
-</div>
-<div class='card-body'>
-Herr Georg Limbach
-<br>
-Adebarsweg 3
-<br>
-18211 Bargeshagen
-</div>
+<ul>
+<li>wurst</li>
+</ul>
+</p>
+
 </div>
 </div>
 </div>
