Urkundenvorlagen öffentlich teilbar machen
closes #9

--- a/app/views/competitions/certificates/lists/new.html.haml
+++ b/app/views/competitions/certificates/lists/new.html.haml
@@ -1,4 +1,4 @@
-= render 'competitions/header', competition: @competition, sub: 'Vorlage wählen', resource_class: Presets::Base
+= render 'competitions/header', competition: @competition, sub: 'Vorlage wählen', resource_class: Certificates::List
 
 .row.g-4
   .col-md-8
