--- a/app/views/competitions/certificates/templates/_index_right.html.haml
+++ b/app/views/competitions/certificates/templates/_index_right.html.haml
@@ -1,3 +1,6 @@
 = card_body('Erläuterung') do
   %p Hier kannst du Vorlagen für Urkunden anlegen, die später mit den Ergebnislisten automatisch ausgefüllt werden.
   .alert.alert-info Bitte beachte, dass diese Funktionen nur mit Firefox und Chrome ausführlich getestet wurden.
+
+  .d-grid.gap-2.col-10.mx-auto
+    = link_to 'Importieren', new_competition_certificates_import_path, class: 'btn btn-light btn-sm'
