--- a/spec/fixtures/views/competitions_certificates_templates_manage_templates_uses_CRUD-index-empty/view.html
+++ b/spec/fixtures/views/competitions_certificates_templates_manage_templates_uses_CRUD-index-empty/view.html
@@ -158,6 +158,9 @@ Erweitert
 <div class='card-body'>
 <p>Hier kannst du Vorlagen für Urkunden anlegen, die später mit den Ergebnislisten automatisch ausgefüllt werden.</p>
 <div class='alert alert-info'>Bitte beachte, dass diese Funktionen nur mit Firefox und Chrome ausführlich getestet wurden.</div>
+<div class='d-grid gap-2 col-10 mx-auto'>
+<a class="btn btn-light btn-sm" href="/2024/mv-cup/certificates/imports/new">Importieren</a>
+</div>
 
 </div>
 </div>
